--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
 </head>
 <body>
-	
+	<nav class="menu flex-container">
+		<i class="fa fa-bars ocultarMenu" aria-hidden="true" id="menuTitulo"></i>
+		<a href="#" class="hiden link">Home</a>
+		<a href="#" class="hiden link">About</a>
+		<a href="#" class="hiden link">Products</a>
+		<a href="#" class="hiden link">Services</a>
+		<a href="#" class="hiden link">Customers</a>
+		<a href="#" class="hiden link">Contact</a>
+	</nav>
 	<script src="https://use.fontawesome.com/4154d90246.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
